UOIS/kubernetes/manifests/apollo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: apollo
  name: apollo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apollo
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
        kompose.service.type: ClusterIP
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: apollo
    spec:
      containers:
        - env:
            - name: ADMIN_DEFAULT_EMAIL
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_DEFAULT_EMAIL
                  name: common-env
            - name: ADMIN_DEFAULT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_DEFAULT_PASSWORD
                  name: common-env
            - name: DEMODATA
              valueFrom:
                configMapKeyRef:
                  key: DEMODATA
                  name: common-env
            - name: GQLUG_ENDPOINT_URL
              valueFrom:
                configMapKeyRef:
                  key: GQLUG_ENDPOINT_URL
                  name: common-env
            - name: GQL_PROXY
              valueFrom:
                configMapKeyRef:
                  key: GQL_PROXY
                  name: common-env
            - name: JWTPUBLICKEYURL
              valueFrom:
                configMapKeyRef:
                  key: JWTPUBLICKEYURL
                  name: common-env
            - name: JWTRESOLVEUSERPATHURL
              valueFrom:
                configMapKeyRef:
                  key: JWTRESOLVEUSERPATHURL
                  name: common-env
            - name: PGSSLMODE
              valueFrom:
                configMapKeyRef:
                  key: PGSSLMODE
                  name: common-env
            - name: PORT
              value: "3000"
            - name: POSTGRES_CREDENTIALS_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_CREDENTIALS_DB
                  name: common-env
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: common-env
            - name: POSTGRES_HOST
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_HOST
                  name: common-env
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_PASSWORD
                  name: db-secrets
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: common-env
            - name: SALT
              valueFrom:
                configMapKeyRef:
                  key: SALT
                  name: common-env
            - name: SERVICES
              value: "\n[\n  {\"name\": \"ug\", \"url\": \"http://gql-ug:8000/gql\"},\n  {\"name\": \"office\", \"url\": \"http://gql-office:8000/gql\"},\n  {\"name\": \"granting\", \"url\": \"http://gql-granting:8000/gql\"},\n  {\"name\": \"projects\", \"url\": \"http://gql-projects:8000/gql\"}\n]  \n"
          image: hrbolek/apollo_federation
          livenessProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 10
          name: apollo
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
      restartPolicy: Always
