UOIS/kubernetes/manifests/gql-granting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: gql-granting
  name: gql-granting
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gql-granting
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
        kompose.service.type: ClusterIP
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: gql-granting
    spec:
      containers:
        - env:
            - name: ADMIN_DEFAULT_EMAIL
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_DEFAULT_EMAIL
                  name: common-env
            - name: ADMIN_DEFAULT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_DEFAULT_PASSWORD
                  name: common-env
            - name: DEMO
              value: "False"
            - name: DEMODATA
              valueFrom:
                configMapKeyRef:
                  key: DEMODATA
                  name: common-env
            - name: GQLUG_ENDPOINT_URL
              valueFrom:
                configMapKeyRef:
                  key: GQLUG_ENDPOINT_URL
                  name: common-env
            - name: GQL_PROXY
              valueFrom:
                configMapKeyRef:
                  key: GQL_PROXY
                  name: common-env
            - name: JWTPUBLICKEYURL
              valueFrom:
                configMapKeyRef:
                  key: JWTPUBLICKEYURL
                  name: common-env
            - name: JWTRESOLVEUSERPATHURL
              valueFrom:
                configMapKeyRef:
                  key: JWTRESOLVEUSERPATHURL
                  name: common-env
            - name: PGSSLMODE
              valueFrom:
                configMapKeyRef:
                  key: PGSSLMODE
                  name: common-env
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: common-env
            - name: POSTGRES_HOST
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_HOST
                  name: common-env
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_PASSWORD
                  name: db-secrets
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: common-env
            - name: SALT
              valueFrom:
                configMapKeyRef:
                  key: SALT
                  name: common-env
          image: hrbolek/gql_granting:0.11.0
          livenessProbe:
            tcpSocket:
              port: 8000
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 10
          name: gql-granting
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: shared-data-vol
              mountPath: /app/systemdata.json
              subPath: systemdata.json
      restartPolicy: Always
      volumes:
        - name: shared-data-vol
          emptyDir: {}
