UOIS/kubernetes/manifests/gql-projects-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: gql-projects
  name: gql-projects
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gql-projects
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
        kompose.service.type: ClusterIP
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: gql-projects
    spec:
      containers:
        - args:
            - uvicorn
            - main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          image: hrbolek/gql_projects:0.11.0
          livenessProbe:
            tcpSocket:
              port: 8000
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 10
          name: gql-projects
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: shared-data-vol
              mountPath: /app/systemdata.json
              subPath: systemdata.json
      restartPolicy: Always
      volumes:
        - name: shared-data-vol
          emptyDir: {}
