UOIS/kubernetes/manifests/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
        kompose.service.type: ClusterIP
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: anoyne@anywhere.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: example
            - name: PGSSLMODE
              valueFrom:
                configMapKeyRef:
                  key: PGSSLMODE
                  name: common-env
          image: dpage/pgadmin4
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -O - http://localhost:80/misc/ping || exit 1
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          name: pgadmin
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
