UOIS/kubernetes/manifests/valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: valkey
  name: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: valkey
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
        kompose.service.type: ClusterIP
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:9.0.3-alpine
          livenessProbe:
            tcpSocket:
              port: 6379
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 10
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
