UOIS/kubernetes/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "33001"
      port: 33001
      targetPort: 8000
  selector:
    io.kompose.service: frontend
  type: ClusterIP
