UOIS/kubernetes/manifests/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "31122"
      port: 31122
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
  type: ClusterIP
