UOIS/kubernetes/manifests/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\user\Documents\UNOB\Diplomka\Kompose\kompose.exe convert -f DockerStack/kubernetes_hd2026/docker-compose.k8.hd2026.yml -o DockerStack/kubernetes_hd2026/manifests/
    kompose.service.type: ClusterIP
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: valkey
  name: valkey
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: valkey
  type: ClusterIP
